css/main.css
/* Unifont: https://unifoundry.com/unifont/index.html */
@font-face {
    font-family: 'Unifont';
    src:  url('fonts/Unifont.woff') format('woff'),
          url('fonts/Unifont.svg#Unifont') format('svg'),
          url('fonts/Unifont.eot'),
          url('fonts/Unifont.eot?#iefix') format('embedded-opentype');
    font-weight: normal;
    font-style: normal;
}

body {
    background: #2d2f4b;
    color: #ffffff;
    font-size: 14px;
    font-family: 'Unifont', sans-serif;
    margin: 0;
    text-align: center;
}

footer {
    width: 300px;
    margin: 10px auto;
    font-size: 14px;
}

a, a:visited, a:active, a:focus {
    text-decoration: none;
    color: #aaaaaa;
}

a:hover {
    text-decoration: none;
    color: #777777;
}

button {
    font-family: 'Unifont', sans-serif;
    border-radius: 15px;
    border: 1px solid #0d0e16;
}

button, button:visited, button:active, button:focus {
    color: #FFFFFF;
    background: #161726;
}

button:hover {
    color: #FFFFFF;
    background: #22243a;
}

input {
    background: #161726;
    color: #FFFFFF;
    border: 2px solid #000000;
    padding: 2px;
    font-size: 14px;
    border-radius: 35px;
    height: 26px;
}

h3 {
    font-size: 25px;
    margin: 10px 0;
}

.active, .active:visited, .active:active, .active:focus, .active:hover {
    color: #FFFFFF;
    background: #2d2f4b;
}

#about {
    padding: 10px;
    font-size: 26px;
}

#about img {
    margin: 15px 0;
    height: 500px;
    width: 500px;
}

#about big {
    font-size: 45px;
}

#about small {
    font-size: 20px;
}

#about p {
    margin: 0;
}

#nav {
    width: 1100px;
    height: 65px;
    margin: 0 auto;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: center;
    align-content: center;
    justify-content: center;
    background: #161726;
}

#nav button {
    width: 110px;
    height: 65px;
    border-radius: 0;
    border: none;
    margin: 0;
}

#nav p {
    font-size: 16px;
}

#simple-nav, #ext-nav {
    margin: 0;
    display: flex;
}

#container {
    margin: 0 auto;
    background: #22243a;
    height: 100%;
    width: 1100px;
    display: flex;
    flex-direction: column;
    align-items: center;
    align-content: center;
    justify-content: space-evenly;
}

#login, #admin {
    width: 1000px;
    margin: 25px auto;
    font-size: 16px;
    display: flex;
    flex-direction: column;
    align-items: center;
    align-content: center;
    justify-content: space-evenly;
}

#login form {
    flex-direction: row;
}

#login button {
    width: 100px;
    height: 35px;
}

.fail {
    margin: 15px 0;
    font-size: 14px;
    color: #CC0000;
}

.drop {
    margin: 0 auto;
    width: 1000px;
    display: flex;
    flex-direction: column;
    align-items: center;
    align-content: center;
    justify-content: space-evenly;
}

.filters {
    margin: 0;
    width: 1000px;
    display: flex;
    flex-direction: row;
    align-items: center;
    align-content: center;
    justify-content: space-between;
}

.filters button {
    width: 485px;
    height: 50px;
    font-size: 18px;
}

.drop-btn {
    margin: 25px 0;
    width: 1000px;
    display: flex;
    flex-direction: row;
    align-items: center;
    align-content: center;
    justify-content: space-evenly;
}

.drop-btn button {
    width: 1000px;
    height: 60px;
    font-size: 36px;
}

.text {
    margin: 0 auto;
    width: 1000px;
    display: flex;
    flex-direction: row;
    align-items: center;
    align-content: center;
    justify-content: space-evenly;
}

hr {
    width: 1000px;
}

.home {
    margin-bottom: 50px;
    flex-wrap: wrap;
}

.home button {
    margin: 5px;
}

.comp {
    margin: 40px auto;
    width: 1000px;
    display: flex;
    flex-direction: row;
    align-items: center;
    align-content: center;
    justify-content: space-evenly;
    flex-wrap: wrap;
}

.comp p {
    width: 150px;
    text-align: center;
    font-size: 24px;
}

.comp img {
    width: 250px;
    height: 250px;
    border: 1px solid #FFFFFF;
    border-radius: 150px;
}

.showcase {
    margin: 25px 0;
    display: flex;
    flex-direction: row;
    align-items: center;
    align-content: center;
    justify-content: center;
    flex-wrap: wrap;
    width: 1000px;
}

.showcase img {
    margin: 0;
    width: 200px;
    height: 200px;
    border: 5px solid #FFFFFF;
    border-radius: 0;
}

.showcase-img {
    padding: 0;
    margin: -2px 0;
    position: relative;
}

.img-id {
    padding: 0;
    margin: 0;
    position: absolute;
    top: 5px;
    right: 10px;
    color: #FFFFFF;
    font-size: 25px;
    mix-blend-mode: difference;
}

.category h2 {
    margin: 20px 0;
    padding: 5px 300px;
    background: #2d2f4b;
    border-radius: 15px;
}

.label, .label:visited, .label:active, .label:focus {
    background: #2d2f4b;
}

.label:hover {
    background: #22243a;
}

.label {
    width: 250px;
    height: 250px;
    font-size: 24px;
    border: 1px solid #FFFFFF;
    border-radius: 150px;
    display: flex;
    flex-direction: column;
    align-items: center;
    align-content: center;
    justify-content: center;
}

.label p {
    font-size: 24px;
}

.lore {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    align-content: flex-start;
    justify-content: flex-start;
}

.lore p {
    text-align: left;
    font-size: 14px;
    width: 600px;
}

.char {
    width: 400px;
    display: flex;
    flex-direction: column;
    align-items: center;
    align-content: center;
    justify-content: center;
}

.char img {
    border: 5px solid #FFFFFF;
}

@media (max-width: 1100px) {

    body {
        font-size: 12px;
    }

    #about {
        padding: 10px;
        font-size: 14px;
    }

    #about img {
        height: 350px;
        width: 350px;
    }

    #about big {
        font-size: 25px;
    }

    #about small {
        font-size: 12px;
    }

    #container {
        margin: 0 auto;
        width: 100%;
    }

    .drop {
        width: 95%;
    }

    .comp {
        margin: 10px auto;
        width: 95%;
        flex-wrap: wrap;
        margin-bottom: 50px;
    }

    .comp img {
        width: 150px;
        height: 150px;
    }

    .category h2 {
        margin: 15px auto;
        width: 92%;
        padding: 5px;
        border-radius: 10px;
    }

    .text {
        width: 95%;
        flex-direction: column;
    }

    .text button {
        width: 100px;
        height: 50px;
        font-size: 14px;
    }

    hr {
        width: 95%;
    }

    h3 {
        font-size: 20px;
    }

    .label {
        margin: 0 0 15px 0;
        width: 100%;
        height: 60px;
        flex-direction: row;
        align-content: space-between;
        justify-content: space-between;
    }

    .label p {
        font-size: 20px;
    }

    .filters {
        width: 95%;
    }

    .filters button {
        width: 160px;
        height: 50px;
        font-size: 14px;
    }

    .drop-btn {
        margin: 25px 0;
        width: 95%;
    }

    .drop-btn button {
        width: 95%;
        height: 75px;
        font-size: 24px;
    }

    .lore {
        display: flex;
        flex-direction: column;
        align-items: center;
        align-content: center;
        justify-content: center;
    }

    .lore p {
        text-align: left;
        font-size: 13px;
        width: 95%;
    }

    .char {
        width: 95%;
        margin-bottom: 15px;
    }

    #nav {
        width: 100%;
        height: 100%;
        margin: 0;
    }

    #nav button {
        width: 100px;
        height: 35px;
        font-size: 12px;
    }

    #ext-nav {
        display: none;
    }

    .showcase {
        width: 100%;
    }

    .showcase img {
        width: 100px;
        height: 100px;
        border: 2px solid #FFFFFF;
    }

    .img-id {
        top: 1px;
        right: 5px;
        font-size: 16px;
    }

}

